# oparl-validator-rs

./: .gitignore  Cargo.toml  Readme.md  generate_schema.py  index.html  index.js  job.sh  license-mit  make_test_data.sh  package-lock.json  package.json  webpack.config.js
.github/workflows/: release.yml  test.yml
src/: batch.rs  cli.rs  client.rs  endpoints.rs  external_list.rs  lib.rs  main.rs  reporter.rs  schema.rs  semaphore.rs  storage.rs  visit.rs  wasm.rs
test-data/: cache_huertgenwald.tar.zst
tests/: test_validator.rs
